fix issue with white space on body

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,9 +1,13 @@
 .home-bg {
   background-image: url(../../images/pexels.jpg);
   box-shadow: inset 0 0 0 500px rgba(215, 222, 225, 0.7);
-  height: 100vh;
+  min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   display: flex;
   flex-direction: row;
@@ -18,7 +22,7 @@
 }
 
 .side-content {
-  height: 100vh;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   margin-right: 100px;
